--- a/items/items.jsonc
+++ b/items/items.jsonc
@@ -25,13 +25,13 @@
     ]
   },
   {
-    "name": "Consumable",
+    "name": "Beans",
     "type": "consumable",
-    "img": "images/items/consumable.png",
-    "max_quantity": 8,
+    "img": "images/items/bean.png",
+    "max_quantity": 10,
     "increment": 1,
     "decrement": 1,
-    "initial_quantity": 1,
+    "initial_quantity": 0,
     "overlay_background": "#000000",
     "overlay_font_size": 8,
     "codes": "consumable"
